k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proguatemala-web
  namespace: proguatemala-test
  labels:
    app: proguatemala-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: proguatemala-web
  template:
    metadata:
      labels:
        app: proguatemala-web
    spec:
      containers:
        - name: web
          # Reemplaza por tu imagen: <TU_REGISTRY>/proguatemala-2026:<TAG>
          image: REGISTRY_PLACEHOLDER/proguatemala-2026:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "128Mi"
          readinessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
